Added swagger for transication
